# WolframCode

./: CMakeLists.txt  main.cpp
include/linked_list/: image.cpp  linked_list.cpp  node.cpp
