# CMakeList.txt : CMake project for WolframCode, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("WolframCode")

# Add source to this project's executable.
add_executable (WolframCode  "WolframCode.h")

# TODO: Add tests and install targets if needed.
